demo-app/k8s/ingress.yaml
apiVersion:networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: demo-app
  annotations:
    # Lớp Ingress mặc định dùng Nginx
    kubernetes.io/ingress.class: "nginx"
    
    # CẤU HÌNH CERT-MANAGER CHO TLS (Mở khóa khi bạn hoàn thành Checklist #10 Ngày 1)
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    # Thay thế app.yourdomain.com bằng subdomain thực tế của bạn
    - host: app.devthangops.live
      http:
        paths:
          # Đường dẫn chính phục vụ Giao diện người dùng (Frontend)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
                  
          # Đường dẫn phục vụ kết nối API tới Backend
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
  
  # CẤU HÌNH CERTIFICATE TLS (Mở khóa khi cấu hình Cert-manager thành công)
  # tls:
  #   - hosts:
  #       - app.devthangops.live
  #     secretName: app-tls-cert
